Eclipse cleanups: dead code, cleaned lbnl files